--- a/landing-page.html
+++ b/landing-page.html
@@ -88,7 +88,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://via.placeholder.com/250x60?text=ITSolutions+Logo" alt="ITSolutions Logo" class="logo">
+            <img src="https://github.com/NoisyPlatypus/itsolutions/blob/main/main-logo.png" alt="ITSolutions Logo" class="logo">
         </header>
         
         <div class="alert">
