--- a/landing-page.html
+++ b/landing-page.html
@@ -88,7 +88,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="main-logo.png" alt="ITSolutions Logo" class="logo">
+            <img src="https://github.com/NoisyPlatypus/itsolutions/blob/8c4448a89288dd93f3c0f3cac57030d677a078fa/main-logo.png" alt="ITSolutions Logo" class="logo">
         </header>
         
         <div class="alert">
