--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
         header {
             text-align: center;
             padding: 20px 0;
-            border-bottom: a 1px solid #eee;
+            border-bottom: 1px solid #eee;
         }
         .logo {
             max-width: 100px;
             height: auto;
         }
         h1 {
-            color: #431F87; 
+            color: #431F87; /* Primary color from branding kit */
             margin-top: 0;
             font-weight: 600;
         }
         h2 {
-            color: #431F87; 
-            border-left: 4px solid #00A896; 
+            color: #431F87; /* Primary color from branding kit */
+            border-left: 4px solid #00A896; /* Secondary color from branding kit */
             padding-left: 10px;
             font-weight: 500;
         }
         h3 {
-            color: #00A896; 
+            color: #00A896; /* Secondary color from branding kit */
             font-weight: 500;
         }
         .alert-box {
@@ -54,15 +54,15 @@
             margin: 20px 0;
         }
         .tips-container {
-            background-color: #e6fff8; 
-            border: 1px solid #00A896; 
+            background-color: #e6fff8; /* Light version of secondary color */
+            border: 1px solid #00A896; /* Secondary color from branding kit */
             padding: 15px;
             border-radius: 4px;
             margin: 20px 0;
         }
         .phishing-example {
-            background-color: #f7f2ff; 
-            border: 1px solid #431F87; 
+            background-color: #f7f2ff; /* Light version of primary color */
+            border: 1px solid #431F87; /* Primary color from branding kit */
             padding: 15px;
             border-radius: 4px;
             margin: 20px 0;
@@ -75,7 +75,7 @@
         }
         .btn {
             display: inline-block;
-            background-color: #00A896; 
+            background-color: #00A896; /* Secondary color from branding kit */
             color: white;
             padding: 10px 20px;
             text-decoration: none;
@@ -84,7 +84,7 @@
             margin-top: 10px;
         }
         .btn:hover {
-            background-color: #008e7e; 
+            background-color: #008e7e; /* Darker version of secondary color */
         }
         footer {
             text-align: center;
@@ -104,21 +104,21 @@
         </header>
 
         <div class="alert-box">
-            <strong>This was a simulated phishing test conducted by the ITSolutions IT Security Department.</strong> You are seeing this page because you clicked on a link in a simulated phishing email and submitted information through the form.
+            <strong>This was a simulated phishing test conducted by your IT Security Department.</strong> You have received this page because you clicked on a link in a simulated phishing email and submitted information through the form.
         </div>
 
         <h2>What is Phishing?</h2>
-        <p>Phishing is a type of cyber attack where attackers disguise themselves as trustworthy entities in order to trick individuals into revealing sensitive information such as usernames, passwords, credit card details, or other personal information. These attacks often come through emails, text messages, or fake websites.</p>
+        <p>Phishing is a type of cyber attack where attackers disguise themselves as trustworthy entities to trick individuals into revealing sensitive information such as usernames, passwords, credit card details, or other personal information. These attacks often come through emails, text messages, or fake websites.</p>
 
         <div class="phishing-example">
             <h3>How This Test Worked</h3>
             <p>The email you received was designed to mimic common phishing tactics used by real attackers. By identifying what techniques were used, you can better protect yourself in the future:</p>
             <ul>
-                <li>The sender's email address appeared to be from "security@itsolutions.com" but wasn't from our actual domain</li>
+                <li>The sender's email address appeared to be from "security-alerts@itsolutions.com" but wasn't from our actual domain</li>
                 <li>The subject line "Your Account Requires Immediate Attention" created a false sense of urgency</li>
                 <li>The message claimed there was "suspicious activity" to prompt immediate action through fear</li>
                 <li>The email contained a "Verify Your Account" link that directed to a fake ITSolutions login page</li>
-                <li>The landing page asked for your email and password details so that attackers could use them to access your real accounts</li>
+                <li>The landing page requested your email and password credentials that attackers could use to access your real accounts</li>
             </ul>
         </div>
 
@@ -137,18 +137,18 @@
         <h2>What Should You Do If You Suspect a Phishing Attempt?</h2>
         <ul>
             <li>Do not click on any links or download any attachments</li>
-            <li>Report the suspicious email to IT Security immediately at <strong>security@itsolutions.com</strong></li>
+            <li>Report the suspicious email to IT Security immediately at <strong>security@company.com</strong></li>
             <li>Delete the email from your inbox</li>
             <li>If you've already clicked a link or shared information, contact IT Security right away and change your passwords</li>
         </ul>
 
         <h2>Next Steps</h2>
         <p>Please complete our short cybersecurity training module to enhance your ability to identify and report phishing attempts:</p>
-        <a href="training-module.html" class="btn">Start Security Training Module</a>
+        <a href="https://noisyplatypus.github.io/itsolutions/training-module.html" class="btn">Start Security Training Module</a>
 
         <footer>
             <p>This simulation was conducted as part of our ongoing security awareness program. If you have any questions, please contact the IT Security Team.</p>
-            <p>© 2025 ITSolutions - IT Security Department</p>
+            <p>© 2025 Holmesglen Institute - IT Security Department</p>
         </footer>
     </div>
 </body>
