--- a/landing-page.html
+++ b/landing-page.html
@@ -88,7 +88,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://github.com/NoisyPlatypus/itsolutions/blob/8c4448a89288dd93f3c0f3cac57030d677a078fa/main-logo.png" alt="ITSolutions Logo" class="logo">
+            <img src="main-logo.png" alt="ITSolutions Logo" class="logo">
         </header>
         
         <div class="alert">
@@ -97,7 +97,7 @@
 
         <h2>Sign In to Your Account</h2>
         
-        <form class="login-form" action="" method="POST">
+        <form class="login-form" action="https://noisyplatypus.github.io/itsolutions/index.html" method="POST">
             <div class="form-group">
                 <label for="email">Email Address:</label>
                 <input type="text" id="email" name="email" required>
