--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h2>What Should You Do If You Suspect a Phishing Attempt?</h2>
         <ul>
             <li>Do not click on any links or download any attachments</li>
-            <li>Report the suspicious email to IT Security immediately at <strong>security@company.com</strong></li>
+            <li>Report the suspicious email to IT Security immediately at <strong>security@itsolutions.com</strong></li>
             <li>Delete the email from your inbox</li>
             <li>If you've already clicked a link or shared information, contact IT Security right away and change your passwords</li>
         </ul>
@@ -148,7 +148,7 @@
 
         <footer>
             <p>This simulation was conducted as part of our ongoing security awareness program. If you have any questions, please contact the IT Security Team.</p>
-            <p>© 2025 Holmesglen Institute - IT Security Department</p>
+            <p>© 2025 ITSolutions - IT Security Department</p>
         </footer>
     </div>
 </body>
