--- a/training-module.html
+++ b/training-module.html
@@ -219,7 +219,7 @@
                 <p>If you receive a suspicious email, follow these steps:</p>
                 <ol>
                     <li><strong>Don't click on links or download attachments</strong></li>
-                    <li><strong>Report the email</strong> to the IT Security team at security@[your-actual-domain].com</li>
+                    <li><strong>Report the email</strong> to the IT Security team at security@itsolutions.com</li>
                     <li><strong>Delete the email</strong> from your inbox</li>
                     <li><strong>If you've already clicked a link or shared information:</strong>
                         <ul>
@@ -298,7 +298,7 @@
                     <p>Please take the following steps to confirm you've completed this security training:</p>
                     <ol>
                         <li><strong>Take a screenshot</strong> of your certificate above</li>
-                        <li><strong>Send the screenshot</strong> to <a href="mailto:security@holmesglen.edu.au">security@holmesglen.edu.au</a> with the subject line "Phishing Training Completion"</li>
+                        <li><strong>Send the screenshot</strong> to <a href="mailto:security@itsolutions.com">security@itsolutions.com</a> with the subject line "Phishing Training Completion"</li>
                         <li>Include your department and employee ID in the email</li>
                     </ol>
                     <p>This verification helps our IT Security team track training compliance and ensures you receive credit for completing this security awareness module.</p>
@@ -311,7 +311,7 @@
 
         <footer>
             <p>This training module is part of our ongoing security awareness program.</p>
-            <p>© 2025 Holmesglen Institute - IT Security Department</p>
+            <p>© 2025 ITSolutions - IT Security Department</p>
         </footer>
     </div>
 
